--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://Binyamin:Binyamin123@cluster0.tzp5d.mongodb.net/conference?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://Binyamin:Binyamin123@cluster0.tzp5d.mongodb.net/conference2?retryWrites=true&w=majority
